testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    dev: test
  name: testpod
spec:
  nodeName: cks-worker
  securityContext:
    runAsUser: 1000
    runAsGroup: 2000
  containers:
  - image: busybox
    name: testpod
    command:
    - sh
    - -c
    - sleep 1d
    securityContext:
     # privileged: true
     # allowPrivilegeEscalation: true
    volumeMounts:
    - mountPath: /test-dir
      name: test-dir
    resources: {}
  volumes:
  - name: test-dir
    hostPath: 
      path: /tmp
      type: "" 
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
